2003/12/04 00:51 (-0500) rwmcfa1

	* fetch_faq.pl, MANIFEST: initial import for fetch_faq.pl, needs 
	testing

	* Makefile.PL: --enable-faq and --disable-apidoc added and worked out

2003/12/04 00:51 (-0500) rwmcfa1

	* : Merge of rel-1-02 doc and fixes back. (following 3 apply)

	* xs/(bunch).xs: ... (list) comments corrected

	* xs/GtkTreeDnd.xs: ^ and fixed bug in api of 
	gtk_tree_drag_source_drag_data_get, selection_data is an out param.

	* xs/(bunch).xs: s/=(arg|signature)/=for $1/

2003/12/02 13:58 (-0500) rwmcfa1

	* : Merge of rel-1-02 doc and fixes back. (following 2 apply)

	* xs/GdkEvent.xs, xs/GdkPixmap.xs, xs/GtkObject.xs: doc

	* xs/GdkDnd.xs xs/GdkProperty.xs, xs/GtkClipboard.xs, xs/GtkDnd.xs,
	xs/GtkListStore.xs, xs/GtkSelection.xs, xs/GtkTextBuffer.xs,
	xs/GtkTreeDnd.xs, xs/GtkTreeStore.xs, xs/GtkTreeView.xs,
	xs/GtkTreeViewColumn.xs: api doc additions.

2003/11/29 16:51 (-0500) muppetman

	* t/ignore_keyboard.pl: merge test helper script from head
	* Gtk2.pm, README: bump to 1.013
	* Makefile.PL: require Glib 1.013

2003/11/29 12:21 (-0500) muppetman

	* xs/GtkMessageDialog.xs: gtk_message_dialog_new uses printf-like
	semantics and does not offer a safe literal version.  pass the message
	through "%s" to be safe, and allow Gtk2::MessageDialog->new to take
	printf-like arguments to be nice.

2003/11/29 12:14 (-0500) rwmcfa1

	* MANIFEST: missing files added

	* t/ignore_keyboard.pl: initial import

	* t/*.t: use the new ignore_keyboard.pl stuff so that tests won't fail
	if you accidentally type while they're going on.

2003/11/29 11:23 (-0500) muppetman

	* MANIFEST
	A examples/inline-images.pl: new example

	* xs/GdkPixbuf.xs: lots of pod for various hard-to-use functions.
	removed unnecessary length() parameter from new_from_inline(), which
	will break any code that was using it, but it's really hard to use
	as it is so i can't imagine anyone's using it.  if you are, i
	apologize.

2003/11/28 21:57 (-0500) muppetman
