@@ -1,4 +1,9 @@
-2003/12/04 00:51 (-0500) rwmcfa1
+2003/12/04 13:10 (-0500) rwmcfa1
+
+	* Makefile.PL: moved the --disable-apidoc thing to MakeHelper.pm, that
+	way everyone can use it.
+
+2003/12/04 09:44 (-0500) rwmcfa1
 
 	* fetch_faq.pl, MANIFEST: initial import for fetch_faq.pl, needs 
 	testing
